--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,18 @@
 {
     "manifest_version": 3,
-    "name": "Get Discord Button Source",
-    "version": "1.0",
-    "description": "Extracts the src attribute of all elements with class 'button button-join is-discord'.",
+    "name": "Get Discord Button Source (OnClick)",
+    "version": "1.1",
+    "description": "Extracts the src attribute of elements with class 'button button-join is-discord' when the extension icon is clicked.",
     "permissions": [
-      "activeTab"
+      "activeTab",
+      "scripting" 
     ],
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
-    ]
+    "action": { 
+      "default_popup": "" 
+    },
+    "background": {
+      "service_worker": "background.js",
+      "scripts": ["background.js"], 
+      "persistent": false
+    }
   }
